--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,7 @@
 
 #root {
   min-height: 100vh;
+  width: 100vw;
   background: url('../assets/images/background_effect.png') no-repeat left top;
   background-color: var(--black-200);
 }
